--- a/apps/dashboard/src/app/resources/edit/profile/profile.component.html
+++ b/apps/dashboard/src/app/resources/edit/profile/profile.component.html
@@ -18,15 +18,34 @@
   <div>
     <div>
       <label for="radio-group-resource-thumbnail">{{ 'resource.thumbnail' | translate }}</label>
-      <div class="body-xs" *ngIf="(thumbnails | async)?.length > 1">Choose from proposal</div>
-      <!-- TODO: replace the static help above by the proper translation below once uploading is ready. -->
-<!--      <div class="body-xs">{{ 'resource.thumbnail.help' | translate }}</div>-->
+      <div class="body-xs">{{ 'resource.thumbnail.help' | translate }}</div>
     </div>
     <div class="thumbnails-container">
       <pa-radio-group name="resource-thumbnail"
                       id="radio-group-resource-thumbnail"
                       formControlName="thumbnail" >
-        <div *ngFor="let thumb of (thumbnails | async); let index=index; let count=count">
+        <div class="drop-container">
+          <div class="drop-image-area"
+               [class.file-over]="hasBaseDropZoneOver"
+               stfFileDrop
+               fileDropAccept="image/*"
+               (fileOver)="fileOverBase($event)"
+               (atFileDrop)="uploadThumbnail($event)"
+               (click)="chooseFiles($event)">
+            <span *ngIf="!isUploading">{{'resource.thumbnail.drop' | translate}}</span>
+            <nsi-spinner *ngIf="isUploading" size="small"></nsi-spinner>
+          </div>
+          <div class="radio-placeholder"></div>
+
+          <input #thumbnailFileInput
+                 type="file"
+                 accept="image/*"
+                 stfFileSelect
+                 multiple
+                 hidden
+                 (atFileSelect)="uploadThumbnail($event)" />
+        </div>
+        <div *ngFor="let thumb of (thumbnails | async); let index=index; let count=count; trackBy: trackByUri">
           <div class="radio-thumbnail-container">
             <img class="resource-thumbnail" [src]="thumb.blob" alt="thumbnail {{index}}">
             <pa-radio *ngIf="count > 1" [value]="thumb.uri" [ariaLabel]="'Thumbnail ' + index"></pa-radio>
