--- a/libs/search-widget/src/components/button/Button.scss
+++ b/libs/search-widget/src/components/button/Button.scss
@@ -1,7 +1,8 @@
 .sw-button {
-  background: transparent;
+  background: var(--button-background-color);
   border: none;
   border-radius: var(--border-radius);
+  color: var(--button-color);
   display: inline-flex;
   font-family: inherit;
   font-size: var(--font-size-base);
@@ -10,8 +11,9 @@
   margin: 0;
   outline: 0;
   padding: var(--rhythm-1) var(--rhythm-2);
-  transition: background-color 0.16s ease-in-out, box-shadow 0.16s ease-in;
+  transition: background-color var(--transition-superfast), box-shadow var(--transition-superfast);
   white-space: nowrap;
+
   &:focus {
     box-shadow: var(--focus-shadow);
     outline: 0;
@@ -27,6 +29,20 @@
   &:not(:disabled) {
     cursor: pointer;
   }
+  &:not(:disabled):hover {
+    background: var(--button-background-color-hover);
+    color: var(--button-color-hover);
+  }
+  &:not(:disabled):active {
+    background: var(--button-background-color-active);
+    color: var(--button-color-active);
+  }
+  &.solid:not(:disabled):not(:active):hover {
+    box-shadow: var(--shadow-small);
+  }
+  &:not(.small) {
+    min-width: var(--rhythm-12);
+  }
 
   .button-label {
     font-weight: var(--font-weight-semi-bold);
@@ -40,29 +56,57 @@
     padding: var(--rhythm-0_5);
   }
 
-  &.solid {
-    color: var(--color-light-stronger);
-    background: var(--color-dark-stronger);
-    border: var(--color-dark-stronger);
-  }
-  &.solid:not(:disabled):hover {
-    background: var(--color-dark-stronger);
-    box-shadow: var(--shadow-small);
-  }
-
-  &.solid:not(:disabled):active {
-    background: var(--color-neutral-light);
+  &.solid.primary {
+    --button-background-color: var(--color-primary-regular);
+    --button-background-color-hover: var(--color-primary-regular);
+    --button-background-color-active: var(--color-primary-lighter);
+    --button-color: var(--color-light-stronger);
+    --button-color-hover: var(--color-light-stronger);
+    --button-color-active: var(--color-light-stronger);
   }
 
-  &.basic {
-    color: var(--color-dark-stronger);
-    background: transparent;
-    border: var(--color-dark-stronger);
+  &.solid.secondary {
+    --button-background-color: var(--color-dark-stronger);
+    --button-background-color-hover: var(--color-dark-stronger);
+    --button-background-color-active: var(--color-neutral-light);
+    --button-color: var(--color-light-stronger);
+    --button-color-hover: var(--color-light-stronger);
+    --button-color-active: var(--color-light-stronger);
   }
-  &.basic:not(:disabled):hover {
-    background: var(--color-neutral-lightest);
+
+  &.solid.inverted {
+    --button-background-color: var(--color-neutral-background);
+    --button-background-color-hover: var(--color-neutral-background);
+    --button-background-color-active: var(--color-neutral-regular);
+    --button-color: var(--color-neutral-regular);
+    --button-color-hover: var(--color-dark-stronger);
+    --button-color-active: var(--color-light-stronger);
   }
-  &.basic:not(:disabled):active {
-    background: var(--color-neutral-lighter);
+
+  &.basic.primary {
+    --button-background-color: transparent;
+    --button-background-color-hover: var(--color-primary-lightest);
+    --button-background-color-active: var(--color-primary-lighter);
+    --button-color: var(--color-primary-regular);
+    --button-color-hover: var(--color-primary-regular);
+    --button-color-active: var(--color-primary-regular);
+  }
+
+  &.basic.secondary {
+    --button-background-color: transparent;
+    --button-background-color-hover: var(--color-neutral-light);
+    --button-background-color-active: var(--color-neutral-regular);
+    --button-color: var(--color-dark-stronger);
+    --button-color-hover: var(--color-dark-stronger);
+    --button-color-active: var(--color-dark-stronger);
+  }
+
+  &.basic.inverted {
+    --button-background-color: transparent;
+    --button-background-color-hover: hsla(0, 0%, 100%, 0.25);
+    --button-background-color-active: hsla(0, 0%, 100%, 0.15);
+    --button-color: var(--color-light-stronger);
+    --button-color-hover: var(--color-light-stronger);
+    --button-color-active: var(--color-light-stronger);
   }
 }
