--- a/libs/common/src/lib/resources/resource-list/pending-resources-table/pending-resources-table.component.html
+++ b/libs/common/src/lib/resources/resource-list/pending-resources-table/pending-resources-table.component.html
@@ -1,41 +1,42 @@
-<div
-  data-cy="spinner"
-  class="loading-shade"
-  *ngIf="isLoading">
-  <nsi-spinner></nsi-spinner>
-</div>
+@if (isLoading) {
+  <div
+    data-cy="spinner"
+    class="loading-shade">
+    <nsi-spinner></nsi-spinner>
+  </div>
+}
 
 <div class="resource-table-header">
-  <div
-    class="resource-bulk-actions"
-    *ngIf="(isAdminOrContrib | async) && selection.length > 0">
-    {{ 'resource.selected_count' | translate: { num: selection.length } }}
+  @if ((isAdminOrContrib | async) && selection.length > 0) {
+    <div class="resource-bulk-actions">
+      {{ 'resource.selected_count' | translate: { num: selection.length } }}
 
-    <ng-container *ngIf="selection.length > 0">
-      <pa-button
-        data-cy="delete-selection"
-        kind="destructive"
-        aspect="basic"
-        size="small"
-        [disabled]="bulkAction.inProgress"
-        (click)="bulkDelete()">
-        {{ 'generic.delete' | translate }}
-      </pa-button>
-      <pa-button
-        aspect="basic"
-        size="small"
-        [disabled]="bulkAction.inProgress"
-        (click)="bulkReprocess()">
-        {{ (selection.length === 1 ? 'generic.reindex' : 'generic.reindex-plural') | translate }}
-      </pa-button>
-      <div
-        class="body-m"
-        *ngIf="bulkAction.inProgress">
-        {{ bulkAction.label | translate }}
-        {{ bulkAction.done }} / {{ bulkAction.total }}
-      </div>
-    </ng-container>
-  </div>
+      @if (selection.length > 0) {
+        <pa-button
+          data-cy="delete-selection"
+          kind="destructive"
+          aspect="basic"
+          size="small"
+          [disabled]="bulkAction.inProgress"
+          (click)="bulkDelete()">
+          {{ 'generic.delete' | translate }}
+        </pa-button>
+        <pa-button
+          aspect="basic"
+          size="small"
+          [disabled]="bulkAction.inProgress"
+          (click)="bulkReprocess()">
+          {{ (selection.length === 1 ? 'generic.reindex' : 'generic.reindex-plural') | translate }}
+        </pa-button>
+        @if (bulkAction.inProgress) {
+          <div class="body-m">
+            {{ bulkAction.label | translate }}
+            {{ bulkAction.done }} / {{ bulkAction.total }}
+          </div>
+        }
+      }
+    </div>
+  }
 </div>
 
 <div class="table-container">
@@ -44,79 +45,91 @@
       <pa-table-sortable-header
         [cells]="headerCells | async"
         (sort)="sortBy($event)">
-        <pa-table-cell
-          header
-          *ngIf="isAdminOrContrib | async">
-          <pa-checkbox
-            data-cy="select-all"
-            [value]="allSelected | async"
-            [paTooltip]="((allSelected | async) === true ? 'generic.deselect_all' : 'generic.select_all') | translate"
-            [disabled]="bulkAction.inProgress"
-            (change)="toggleAll()"></pa-checkbox>
-        </pa-table-cell>
+        @if (isAdminOrContrib | async) {
+          <pa-table-cell header>
+            <pa-checkbox
+              data-cy="select-all"
+              [value]="allSelected | async"
+              [paTooltip]="((allSelected | async) === true ? 'generic.deselect_all' : 'generic.select_all') | translate"
+              [disabled]="bulkAction.inProgress"
+              (change)="toggleAll()"></pa-checkbox>
+          </pa-table-cell>
+        }
       </pa-table-sortable-header>
 
-      <pa-table-row *ngFor="let row of data | async; trackBy: trackById">
-        <pa-table-cell *ngIf="isAdminOrContrib | async">
-          <pa-checkbox
-            [value]="selection.includes(row.resource.id)"
-            (change)="toggleSelection(row.resource.id)"></pa-checkbox>
-        </pa-table-cell>
-        <pa-table-cell
-          clickable
-          (click)="onClickTitle(row.resource)">
-          <div class="title-with-icon">
-            <pa-icon
-              *ngIf="row.resource.icon | mimeIcon as icon"
-              [name]="icon"></pa-icon>
-            <div class="title-and-description">
-              <div class="body-s">{{ row.resource.title }}</div>
-              <small *ngIf="row.description">{{ row.description }}</small>
+      @for (row of data | async; track row.resource.id) {
+        <pa-table-row>
+          <pa-table-cell *ngIf="isAdminOrContrib | async">
+            <pa-checkbox
+              [value]="selection.includes(row.resource.id)"
+              (change)="toggleSelection(row.resource.id)"></pa-checkbox>
+          </pa-table-cell>
+          <pa-table-cell
+            clickable
+            (click)="onClickTitle(row.resource)">
+            <div class="title-with-icon">
+              @if (row.resource.icon | mimeIcon; as icon) {
+                <pa-icon [name]="icon"></pa-icon>
+              }
+              <div class="title-and-description">
+                <div
+                  class="body-s"
+                  data-cy="resource-title">
+                  {{ row.resource.title }}
+                </div>
+                @if (row.description) {
+                  <small
+                    class="body-xs"
+                    data-cy="resource-description">
+                    {{ row.description }}
+                  </small>
+                }
+              </div>
+              <div class="title-status">
+                @if (row.resource.metadata?.status === 'PENDING') {
+                  <pa-icon name="clock-dash"></pa-icon>
+                } @else if (row.resource.metadata?.status === 'ERROR') {
+                  <pa-icon
+                    class="error"
+                    name="warning"></pa-icon>
+                }
+              </div>
             </div>
-            <div class="title-status">
-              <pa-icon
-                *ngIf="row.resource.metadata?.status === 'PENDING'"
-                name="clock-dash"></pa-icon>
-              <pa-icon
-                class="error"
-                *ngIf="row.resource.metadata?.status === 'ERROR'"
-                name="warning"></pa-icon>
-            </div>
-          </div>
-        </pa-table-cell>
+          </pa-table-cell>
 
-        <pa-table-cell center>
-          <span class="body-s">{{ row.resource.created | formatDate: { default: true } }}</span>
-        </pa-table-cell>
-        <pa-table-cell>
-          <span class="body-s">{{ row.status }}</span>
-        </pa-table-cell>
-        <pa-table-cell-menu *ngIf="isAdminOrContrib | async">
-          <pa-button
-            icon="more-vertical"
-            aspect="basic"
-            size="small"
-            paTooltip="generic.actions"
-            [disabled]="bulkAction.inProgress"
-            [paPopup]="menu">
-            {{ 'generic.actions' | translate }}
-          </pa-button>
-          <pa-dropdown #menu>
-            <pa-option
-              [disabled]="!(isAdminOrContrib | async)"
-              (selectOption)="triggerAction(row.resource, 'reprocess')">
-              {{ 'generic.reindex' | translate }}
-            </pa-option>
-            <pa-separator></pa-separator>
-            <pa-option
-              destructive
-              [disabled]="!(isAdminOrContrib | async)"
-              (selectOption)="triggerAction(row.resource, 'delete')">
-              {{ 'generic.delete' | translate }}
-            </pa-option>
-          </pa-dropdown>
-        </pa-table-cell-menu>
-      </pa-table-row>
+          <pa-table-cell center>
+            <span class="body-s">{{ row.resource.created | formatDate: { default: true } }}</span>
+          </pa-table-cell>
+          <pa-table-cell>
+            <span class="body-s">{{ row.status }}</span>
+          </pa-table-cell>
+
+          @if (isAdminOrContrib | async) {
+            <pa-table-cell-menu>
+              <pa-button
+                icon="more-vertical"
+                aspect="basic"
+                size="small"
+                paTooltip="generic.actions"
+                [disabled]="bulkAction.inProgress"
+                [paPopup]="menu">
+                {{ 'generic.actions' | translate }}
+              </pa-button>
+              <pa-dropdown #menu>
+                <pa-option (selectOption)="triggerAction(row.resource, 'reprocess')">
+                  {{ 'generic.reindex' | translate }}
+                </pa-option>
+                <pa-separator></pa-separator>
+                <pa-option
+                  destructive
+                  (selectOption)="triggerAction(row.resource, 'delete')">
+                  {{ 'generic.delete' | translate }}
+                </pa-option>
+              </pa-dropdown>
+            </pa-table-cell-menu>
+          }
+        </pa-table-row>
+      }
     </pa-table>
   </pa-infinite-scroll>
 </div>
